Fixed login page responsiveness , alignment of top fields in booklist , and fixed the logout button alignment

--- a/book-management-app/src/components/Sidebar/Sidebar.css
+++ b/book-management-app/src/components/Sidebar/Sidebar.css
@@ -64,6 +64,10 @@ div.layout-container {
   color: white;
   background-color: #1E1E1E;
 }
+.sidebar ul li:hover{
+  background-color: lightgray;
+  border-radius: 5px;
+}
 
 /* Sidebar icon styling for consistent size and spacing */
 .sidebarIcons {
